<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="24dp"
    >

    <EditText
        android:id="@+id/edit_text_task_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:inputType="text"
        android:hint="@string/dialog_add_task_title_hint"

        android:importantForAutofill="no"
        />
    <EditText
        android:id="@+id/edit_text_task_description"
        app:layout_constraintTop_toBottomOf="@id/edit_text_task_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:inputType="text"
        android:hint="@string/dialog_add_task_details_hint"


        android:layout_marginTop="12dp"
        android:textSize="14sp"
        android:importantForAutofill="no"
        />
    
    <ImageButton
        android:id="@+id/add_task_details_button"
        android:src="@drawable/outline_notes_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"

        app:layout_constraintTop_toBottomOf="@+id/edit_text_task_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="5dp"

        android:contentDescription="@string/dialog_add_task_details_button"
        />
    <ImageButton
        android:src="@drawable/outline_star_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/add_task_details_button"
        app:layout_constraintTop_toBottomOf="@id/edit_text_task_description"
        android:layout_margin="5dp"

        android:contentDescription="@string/star_task_button"
        android:background="@null"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/save"
        android:textColor="@color/blackgrey"
        style="@style/Widget.Material3.Button.TextButton"

        app:layout_constraintTop_toTopOf="@id/add_task_details_button"
        app:layout_constraintBottom_toBottomOf="@id/add_task_details_button"
        app:layout_constraintEnd_toEndOf="parent"

        />
</androidx.constraintlayout.widget.ConstraintLayout>